# agent-bench

./: .env.example  .gitignore  LOOP-STATE-SITE.md  LOOP-STATE.md  README.md  docker-compose.yml  pyproject.toml
adapters/: __init__.py  base.py
adapters/crewai/: __init__.py  adapter.py
adapters/langgraph/: __init__.py  adapter.py
corpus/: access-provisioning.md  data-retention.md  deploy-production.md  deploy-staging.md  golden.yaml  incident-response.md  oncall-policy.md  service-catalog.md
docs/: index.html
evalkit/: __init__.py  judge.py  run.py
porcelain/: __init__.py  llm.py  retrieval.py  runner.py  types.py
prompts/personas/: README.md
report/: __init__.py  build.py  results.md
specs/: crewai-baseline.yaml  langgraph-baseline.yaml
tests/: conftest.py  test_persona_backend.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_real_anthropic_skipif.py  test_runner_fake_llm.py
